packages/ui-library/src/css/inputs.scss
/* ... */
.input-file-upload {
	position: relative;
	display: block;

	&.no-label {
		margin-top: 0;
	}
	.form-error.help-tooltip {
		.tooltip-text {
			top: 7px;
		}
	}
	input[type=file] {
		position: absolute;
		top: 0;
		right: 0;
		margin: 0;
		padding: 0;
		font-size: 1px;
		width: 1px;
		height: 1px;
		cursor: pointer;
		@include opacity(0);
	}
	.choose {
		display: block;
		width: 95px;
		text-transform: none;
	}
	.file-info {
		line-height: 1em;
		padding: 0;
		font-family: $font-pn-regular;
		display: inline-block;

		a.file-remove {
			display: none;
			font-size: 14px;
			line-height: 1em;
			margin: 5px 10px 0 0;
		}
		.file-name {
			font-size: 14px;
			line-height: 1em;
			margin: 0 20px 0 0;
			color: $color-midnight;
			display: block;
			.icon-file {
				display: none;
			}
		}
		// within a details tooltip, login modal
		&.stacked {
			.file-name {
				vertical-align: top;
				max-width: 250px;
				@include text-truncate;
			}
		}
	}
	&.file-selected {
		.button.inline, .file-size {
			display: none;
		}
		.file-info {
			position: relative;
			float: left;
			.icon-file {
				font-size: 10px;
				padding-right: 5px;
				display: inline-block;
			}
			&:before {
				display: none;
			}
		}
		a.file-remove {
			display: inline-block;
		}
	}
	&.image-upload {
		$img-width: 90px;

		&.selected, &.not-selected {
			.image-icon {
				&:after {
					content: '';
					border: none;
				}
			}
		}
		.image-icon {
			display: inline-block;
			width: 67px;
			height: 67px;
			border: 1px solid $color-stratus;
			padding: 0;
			position: relative;
			overflow: hidden;

			@include border-radius(2px);

			&:before {
				display: block;
				position: absolute;
				left: -10px;
				color: $color-stratus;
				font-family: $icon-font;
				text-transform: none;
				content: '\69';
				font-size: 60px;
				height: 67px;
				line-height: 1.3em;
			}
			&:after {
				line-height: 1em;
				position: absolute;
				width: 15px;
				font-family: $icon-font;
				text-transform: none;
				right: 5px;
				bottom: 5px;
				content: '*';
				font-size: 15px;
				padding: 5px;
				background-color: $color-white;
				border: 1px solid $color-rhino;
				@include border-radius(18px);
			}
			&.no-logo {
				display: inline-block;
				color: $color-stratus;
				border: 1px solid $color-stratus;
				height: 72px;
				width: 72px;
				padding: 5px 0 0 0;
			}
		}
		.with-logo {
			width: 90px;
		}
		.input-image-thumb {
			display: none;
			@include border-radius(4px);
			img {
				width: $img-width;
			}
		}
		.choose {
			display: none;
		}
		.file-size {
			position: absolute;
			bottom: 0;
			left: $img-width - 1px;
			min-width: 300px;
			color: $color-stratus;
			line-height: 1em;
			font-size: 13px;
			span:first-child {
				display: block;
			}
		}
		.image-types {
			font-size: 14px;
			position: absolute;
			top: 65px;
			left: $img-width + 15px;
		}
		.form-error-message {
			.tooltip-text {
				min-width: 250px;
				margin-left: 20px;
			}
		}
		.file-info {
			display: block;
			float: none;
		}
		&.file-selected {
			.input-image-thumb {
				display: block;
			}
			.image-icon {
				display: none;
			}
		}
		&.inactive {
			display: none;
		}
	}
}
.input-toggle {
	$toggle-height: 26px;
	$toggle-width: 40px;
	$toggle-time: 0.1s;

	$toggle-diameter: $toggle-height;
	$toggle-border-radius: ceil($toggle-height / 2) + 1;

	display: inline-block;

	.toggle {
		position: relative;
		height: $toggle-height;
		width: $toggle-width;
		background-color: $color-input-border;
		display: inline-block;
		border: 1px solid $color-input-border;
		vertical-align: middle;
		@include border-radius($toggle-border-radius);
		@include transition(all $toggle-time);

		&:after {
			content: '';
			background-color: $color-white;
			position: absolute;
			left: -1px;
			top: -1px;
			height: $toggle-diameter;
			width: $toggle-diameter;
			border: 1px solid $color-input-border;
			@include border-radius($toggle-border-radius);
			@include transition(all $toggle-time);
			@include box-shadow((1px 1px 4px 0px rgba(0, 0, 0, 0.15)));
		}
	}
	&.selected {
		.toggle {
			background-color: $color-success;
			border-color: $color-success;

			&:after {
				left: $toggle-width - $toggle-height + 1;
			}
		}
	}
	&.disabled {
		@include opacity(0.5);
	}
	&.form-error {
		.toggle {
			border-color: $color-input-error;

			&:focus {
				border-color: $color-input-error;
			}
			&:after {
				border-color: $color-input-error;
			}
		}
	}
	&.small {
		.toggle {
			$toggle-height: 18px;
			$toggle-width: 30px;
			$toggle-diameter: $toggle-height;

			height: $toggle-height;
			width: $toggle-width;

			&:after {
				height: $toggle-diameter;
				width: $toggle-diameter;
			}
			&.selected {
				&:after {
					left: $toggle-width - $toggle-height + 1;
				}
			}
		}
	}
}
/* ... */

